[tool.poetry]
name = "honkairail"
version = "1.1.4-2"
description = "A simple and convenient model for Mihoyo API which is complemented by other resources"
authors = ["None"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/DEViantUA/HonkaiRail"
homepage = "https://github.com/DEViantUA/HonkaiRail"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
pydantic = "<3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
